--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,12 +6,18 @@
         <item name="colorPrimaryVariant">@color/alt_green</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/main_green</item>
+        <item name="colorSecondaryVariant">@color/alt_green</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="colorSurface">@color/main_green</item> <!-- For some reason this had to be the way to change actionBar color -->
+        <item name="actionBarStyle">@style/ActionBar</item> <!-- Applies the below ActionBar style -->
+    </style>
+
+    <!-- ActionBar styles -->
+    <!-- This is to make the action bar keep main color without affecting the BottomNavigationView -->
+    <style name="ActionBar" parent="@style/Widget.AppCompat.ActionBar">
+        <item name="background">@color/main_green</item>
     </style>
 </resources>
