--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".BalanceFragment">
 
-    <TextView
+    <com.anychart.AnyChartView
+        android:id="@+id/pieView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/balance"
-        android:textStyle="bold" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
