Added floating button to fragments.
Outcome and Income fragments now have a floating button to register a transaction.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="dark_navbar">#424242</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="outcome_red">#CC0000</color>
 </resources>
