--- a/app/src/main/res/layout/fragment_outcome.xml
+++ b/app/src/main/res/layout/fragment_outcome.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".OutcomeFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/outcome"
-        android:textStyle="bold" />
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addOutcomeBtn"
+        android:layout_width="342dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:contentDescription="@string/income_button"
+        android:focusable="true"
+        android:src="@drawable/outcome_nav_bar"
+        app:maxImageSize="42dp"
+        android:backgroundTint="@color/outcome_red"/>
 </FrameLayout>
