FAB border color changed.

--- a/app/src/main/res/layout/fragment_outcome.xml
+++ b/app/src/main/res/layout/fragment_outcome.xml
@@ -18,5 +18,5 @@
         android:focusable="true"
         android:src="@drawable/outcome_nav_bar"
         app:maxImageSize="42dp"
-        android:backgroundTint="@color/outcome_red"/>
+        app:backgroundTint="@color/outcome_red"/>
 </FrameLayout>
